# minimal-iot

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  DOCKER.md  Dockerfile.backend  Makefile  PSEUDOCODE.md  README.md  REQUIREMENTS.md  SPECIFICATION.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/: API_SPECIFICATION.md  ARCHITECTURE.md  DB_SCHEMA.md  EVALUATION.md  MQTT_ADAPTER_PLAN.md  PLAN.md  PSEUDOCODE.md  SPARC_FRAMEWORK.md  SPECIFICATION.md
docs/research/: MQTT.md
docs/scenarios/: BATCH_PROCESSING.md  LOSSLESS_INGESTION.md  NORMAL.md  SCHEDULER.md  TIMEZONE_NORMALIZATION.md
frontend/: .dockerignore  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
migrations/: env.py
migrations/versions/: 54bb015b4dd8_initial_migration.py
scripts/: run-dev.sh  seed_data.py  setup.sh
src/: __init__.py  main.py
src/api/: __init__.py  readings_router.py  sensors_router.py
src/config/: database.py  settings.py
src/domain/: __init__.py  batch_policy.py  clock.py  status.py  timestamp.py  types.py  validation.py
src/models/: __init__.py  mode_request.py  reading.py  sensor_status.py
src/repositories/: __init__.py  mode_request_repository.py  reading_repository.py  sensor_status_repository.py
src/schedulers/: __init__.py  health_evaluation_job.py  scheduler_runner.py
src/schemas/: __init__.py  reading_schemas.py  sensor_schemas.py
src/services/: __init__.py  ingestion_service.py  mode_service.py  query_service.py
src/transports/: __init__.py  (+2 more)
tests/: conftest.py
(+23 files in other folders)
